force-app/main/default/objects/MSTR_Security__c/MSTR_Security__c.object-meta.xml
<CustomObject>
    <label>MSTR Security</label>
    <nameField>
        <displayFormat>MSTR-ID{0000000}</displayFormat>
        <label>MSTR Security Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSTR Security</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>