force-app/main/default/objects/MSTR_Security__c/fields/MicroStrategy_Account_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>MicroStrategy_Account_Plan_ID__c</fullName>
    <label>MicroStrategy Account Plan ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>