force-app/main/default/objects/MSTR_Security__c/fields/MicroStrategy_Username__c.field-meta.xml
<CustomField>
    <fullName>MicroStrategy_Username__c</fullName>
    <label>MicroStrategy Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>